--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^6.3.1",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^6.4.12",
+    "immer": "^10.1.1",
     "jotai": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tone": "^15.0.4"
+    "tone": "^15.0.4",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
