--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jotai": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tone": "^15.0.4"
+    "tone": "^15.0.4",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
